# auto-color-filter

./: README.md  hello.py  main.py  pyproject.toml
media/: color_transition.avi
src/auto_color_filter/: color_transition.py  main.py  segmentation.py  utils.py
tests/: test_convert_color_space.py  test_interpolate_colors.py
