[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-color-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=2.2.1", "opencv-python>=4.10.0.84"]

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.8"]
